main.tf
resource "azurerm_resource_group" "vm_rg" {
  name 	= var.resource_group_name
  location = var.location
}

resource "azurerm_virtual_network" "vm_vnet" {
  name            	= var.vnet_name
  address_space   	= ["10.0.0.0/16"]
  location        	= azurerm_resource_group.vm_rg.location
  resource_group_name = azurerm_resource_group.vm_rg.name
}

resource "azurerm_subnet" "vm_subnet" {
  name             	= var.subnet_name
  resource_group_name  = azurerm_resource_group.vm_rg.name
  virtual_network_name = azurerm_virtual_network.vm_vnet.name
  address_prefixes 	= ["10.0.1.0/24"]
}

resource "azurerm_public_ip" "vm_public_ip" {
  name                = "${var.vm_name}-public-ip"
  location            = azurerm_resource_group.vm_rg.location
  resource_group_name = azurerm_resource_group.vm_rg.name
  allocation_method   = "Static"  
  sku                 = "Standard"
}

resource "azurerm_network_interface" "vm_nic" {
  name            	= "${var.vm_name}-nic"
  location        	= azurerm_resource_group.vm_rg.location
  resource_group_name = azurerm_resource_group.vm_rg.name

  ip_configuration {
	name                      	= "internal"
	subnet_id                 	= azurerm_subnet.vm_subnet.id
	private_ip_address_allocation = "Dynamic"
	public_ip_address_id      	= azurerm_public_ip.vm_public_ip.id
  }
}

resource "azurerm_linux_virtual_machine" "vm" {
  name            	= var.vm_name
  resource_group_name = azurerm_resource_group.vm_rg.name
  location        	= azurerm_resource_group.vm_rg.location
  size            	= "Standard_B1s"
  admin_username  	= var.admin_username
  network_interface_ids = [
	azurerm_network_interface.vm_nic.id,
  ]

  admin_ssh_key {
	username   = var.admin_username
	public_key = var.ssh_public_key
  }

  os_disk {
	caching          	= "ReadWrite"
	storage_account_type = "Standard_LRS"
  }

  source_image_reference {
	offer = "ubuntu-24_04-lts"
	publisher = "Canonical"
	sku = "server"
	version = "latest"
  }
}
resource "azurerm_network_security_group" "vm_nsg" {
  name            	= "${var.vm_name}-nsg"
  location        	= azurerm_resource_group.vm_rg.location
  resource_group_name = azurerm_resource_group.vm_rg.name

  security_rule {
	name                   	= "allow-SSH"
	priority               	= 100
	direction              	= "Inbound"
	access                 	= "Allow"
	protocol               	= "Tcp"
	source_port_range      	= "*"
	destination_port_range 	= "22"
	source_address_prefix  	= "*"
	destination_address_prefix = "*"
  }
  security_rule {
	name                   	= "allow-http-8080"
	priority               	= 101
	direction              	= "Inbound"
	access                 	= "Allow"
	protocol               	= "Tcp"
	source_port_range      	= "*"
	destination_port_range 	= "8080"
	source_address_prefix  	= "*"
	destination_address_prefix = "*"
  }
  security_rule {
	name                   	= "allow-http-80"
	priority               	= 102
	direction              	= "Inbound"
	access                 	= "Allow"
	protocol               	= "Tcp"
	source_port_range      	= "*"
	destination_port_range 	= "80"
	source_address_prefix  	= "*"
	destination_address_prefix = "*"
  }
}

resource "azurerm_network_interface_security_group_association" "vm_nsg_assoc" {
  network_interface_id  	= azurerm_network_interface.vm_nic.id
  network_security_group_id = azurerm_network_security_group.vm_nsg.id
}
